이호빈 커밋

--- a/src/main/resources/templates/user/help/help.html
+++ b/src/main/resources/templates/user/help/help.html
@@ -249,7 +249,7 @@
         html += `
             <div class="faq-item">
                 <div class="faq-question">Q. ${faq.title}</div>
-                <div class="faq-answer">A. ${faq.answer || "답변 준비 중입니다."}</div>
+                <div class="faq-answer">A. ${faq.content || "답변 준비 중입니다."}</div>
             </div>
         `;
     });
