--- a/src/main/resources/templates/admin/admin_mainpage.html
+++ b/src/main/resources/templates/admin/admin_mainpage.html
@@ -104,7 +104,9 @@
             <p class="welcome-subtitle">민기인력 관리자 시스템</p>
             <p class="welcome-description">
                 관리자 페이지에 오신 것을 환영합니다.<br>
-                좌측 메뉴를 통해 각종 관리 기능을 이용하실 수 있습니다.
+                좌측 메뉴를 통해 각종 관리 기능을 이용하실 수 있습니다.<br>
+                관리자의 부서 및 직급에 따라 활동이 제한됩니다. <br>
+                보안을 위해 관리자의 로그인 기록 및 ip 외 .. 등등 정보를 수집하고 있습니다.
             </p>
         </div>
 
