--- a/src/main/resources/templates/fragments/corpHeader.html
+++ b/src/main/resources/templates/fragments/corpHeader.html
@@ -86,10 +86,10 @@
 	        <td>
 	          <div class="corp-submenu-item">
 	            <a th:href="@{/corp/talentPool/talent_pool}"><span class="corp-submenu-link">전체 인재</span></a><br>
-	            <a th:href="@{/corp/talentPool/offer}"><span class="corp-submenu-link">면접제의한 인재정보</span></a><br>
+<!-- 	            <a th:href="@{/corp/talentPool/offer}"><span class="corp-submenu-link">면접제의한 인재정보</span></a><br> -->
 	            <a th:href="@{/corp/talentPool/scrap}"><span class="corp-submenu-link">스크랩한 인재정보</span></a><br>
-	            <a th:href="@{/corp/talentPool/recently_viewed}"><span class="corp-submenu-link">열람한 인재정보</span></a><br>
-	            <span class="corp-submenu-link">AI인재추천</span>
+	            <a th:href="@{/corp/talentPool/recently_viewed}"><span class="corp-submenu-link">최근본 인재정보</span></a><br>
+<!-- 	            <span class="corp-submenu-link">AI인재추천</span> -->
 	          </div>
 	        </td>
 <!-- 	        <td>
@@ -102,7 +102,7 @@
 	        <td>
 	          <div class="corp-submenu-item">
 	            <a th:href="@{/corp/info/edit}"><span class="corp-submenu-link">기업 정보 수정</span></a><br>
-	           <a th:href="@{/corp/image/upload}"><span class="corp-submenu-link">이미지 등록</span></a>
+	           	<a th:href="@{/corp/image/upload}"><span class="corp-submenu-link">이미지 등록</span></a><br>
 	            <a href="#void"><span class="corp-submenu-link">비밀번호 변경</span></a>
 	          </div>
 	        </td>
