--- a/src/main/resources/templates/login/joinUserForm.html
+++ b/src/main/resources/templates/login/joinUserForm.html
@@ -939,8 +939,9 @@ function addTenThousandResumes(){
             <button type="submit" id="submitBtn" class="submit-btn" >다음단계</button>
         </form>
         <hr>
-        <button type="button" id="createRandomUsers">랜덤유저 생성</button>
-        <button type="button" id="createRandomResume">유저 랜덤 이력서 생성</button>
+        <!-- 랜덤 유저, 이력서 생성하기 버튼  -->
+        <button type="button" id="createRandomUsers" style="display: none">랜덤유저 생성</button>
+        <button type="button" id="createRandomResume" style="display: none">유저 랜덤 이력서 생성</button>
     </div>
     
     <!-- Vertically centered scrollable modal -->
