--- a/src/main/resources/templates/admin/admin_corp_detail.html
+++ b/src/main/resources/templates/admin/admin_corp_detail.html
@@ -126,7 +126,7 @@
 </tr>
 </tbody>
 </table>
-<a href="/admin_corp">
+<a href="/admin/admin_corp">
   <input type="button" value="뒤로가기" />
 </a>
 </div>
