--- a/src/main/resources/templates/admin/admin_member.html
+++ b/src/main/resources/templates/admin/admin_member.html
@@ -77,7 +77,7 @@ input[type="submit"]:hover {
 <th:block th:replace="fragments/adminHeader :: adminHeader"></th:block>
 
 <div class="main">
-<form action="/admin_member_search">
+<form action="/admin/admin_member_search">
 <span>이메일</span>
 <span><input type="text" id="email" name="email"/></span>
 <span>이름	</span>
@@ -127,7 +127,7 @@ input[type="submit"]:hover {
 <tbody>
 <tr th:each="m:${member}">
 <td>
-<form id="detail" action="/admin_member_detail">
+<form id="detail" action="/admin/admin_member_detail">
   <input type="hidden" name="email" th:value="${m.email}" />
   <a href="#" onclick="document.getElementById('detail').submit();" th:text="${m.email}"></a>
 </form>
